# robotrace_course_cad

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_robotrace_course_cad.bat  run_robotrace_course_cad.sh
course_image_parser/: README.md  consolidate_design_candidates.py  correct_helper_circles_from_matches.py  detect_slalom_template.py  detect_start_goal_area.py  detect_support_circles.py  extract_course_board.py  line_arc_path_fitting.py  match_helper_circles.py  pyproject.toml  trace_centerline_points.py
doc/: robotrace_course_cad_spec.md  tips.md
examples/: sample_course.json  template_course.json  test_course.json
examples/synthetic/: 2012alljapan_pre.json  2013alljapan_pre.json  2013hokushinetsu.json  2015alljapan.json  2015alljapan_pre.json  2016alljapan.json  2017alljapan.json  2017alljapan_pre.json  2018alljapan.json  2018student.json  2019alljapan.json  2019east.json  2019kansai.json  2020alljapan.json  2020shorttrack.json  2021alljapan.json  2022east.json  2023east.json  2023kansai.json  2023student.json  2024alljapan.json  2024east.json  2024kansai.json  2024student.json  2025alljapan.json  2025east.json  2025kansai.json  2025student.json
examples/synthetic_reference/: 2012alljapan_pre_arcs.json  2012alljapan_pre_helper_circles.json  2015alljapan_arcs.json  (+81 more)
tests/: __init__.py  test_circle_adjust.py  test_course_model.py  test_course_rules.py  test_final_drawing_exporter.py  test_intersection_validation.py  test_json_io.py  test_main.py  test_markers.py  test_materials.py  test_synthetic_reference.py
tools/: generate_synthetic_examples.py
(+27 files in other folders)
