[project]
name = "robotrace-course-cad"
version = "0.1.0"
description = "Small PySide6 CAD tool for robotrace course helper circles and generated centerlines."
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
]

[project.scripts]
robotrace-course-cad = "robotrace_course_cad.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
